[package]
name = "semver-trick"
version = "0.2.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Example of applying the semver trick to prevent a difficult coordinated upgrade"
documentation = "https://docs.rs/semver-trick"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/semver-trick"
